# MTG-Collection-Tracker

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  daily.yml  noop-report.yml  seed.yml
docs/: spec.md
scripts/: bootstrap.sh
src/mtg_tracker/: __init__.py  __main__.py  cli.py  config.py  daily.py  ingest.py  logging_config.py  logging_utils.py  seed.py  viewer.py  viewer_logic.py
src/mtg_tracker/state/: __init__.py  github_release.py  local_path.py
tests/: conftest.py  test_cli.py  test_config.py  test_daily.py  test_github_release_backend.py  test_ingest.py  test_local_path_backend.py  test_seed.py  test_state_backends.py  test_state_factory.py  test_viewer_app.py  test_viewer_logic.py
tests/fixtures/: ManaBox_Collection.csv  ManaBox_Collection.tsv  allidentifiers_tiny.json  allprices_tiny.json  manabox_sample.csv  manabox_sample.tsv
viewer/: app.py
