[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-collection-tracker"
version = "0.1.0"
description = "CLI tooling for MTG collection price tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mtg-tracker = "mtg_tracker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
